Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23327

Invisible MultiPointTouchArea unexpectedly reacts to touch

    XMLWordPrintable

Details

    Description

      Run the example code below, tapping the opened window will output log "pressed" after each touch press.

      import QtQuick 2.0
      
      Rectangle {
          width: 200; height: 200
          MultiPointTouchArea {
              visible: false
              anchors.fill: parent
              onTouchPointsPressed: console.log("pressed")
          }
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            brasser Michael Brasser (closed Nokia identity) (Inactive)
            jpetrell Joona Petrell
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes