Invisible items should not respond to touch events.

Task-number: QTBUG-23327
Change-Id: I959c9ba40e4ce3972fc3fde2f1c7e73615e78e2e
Reviewed-by: Alan Alpert <alan.alpert@nokia.com>